Fix broken UI with dark themes on linux #205 . Add preference for resource timing

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -14,6 +14,7 @@ body {
 	background: #fff;
 	font-family: sans-serif;
 	font-size: 12.8px;
+	color: #000;
 	margin: 0;
 }
 body > div > *:first-child {
@@ -79,11 +80,11 @@ input[type="radio"][id="default"]:checked + label {
 	color: #8e8e8e;
 }
 .validInput {
-	border: solid 2px #cbe86b;
+	border: solid 2px #cbe86b !important; 
 	-moz-transition: .3s ease-in-out;
 }
 .invalidInput {
-	border: solid 2px #c02942;
+	border: solid 2px #c02942 !important;
 	-moz-transition: .3s ease-in-out;
 }
 select {
@@ -219,8 +220,11 @@ body > div {
 #xffip,
 #viaip {
 	margin-left: 1em;
+	border: 2px solid #ccc;
+	background-color:#fff;
 	width: calc(70% - 1em);
 }
+
 
 /* extras tab */
 
@@ -229,11 +233,17 @@ body > div {
 /* whitelist tab */
 
 #whitelist_tab textarea {
+	background-color:#fff;
+	border: 2px solid #ccc;
 	height: 60%;
 	resize: none;
 	width: 100%;
 }
+
+
 #whitelist_tab input[type="text"] {
+	background-color:#fff;
+	border: 2px solid #ccc;
 	width: 100%;
 }
 
